--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body {
 
 .wall-right {
 	position: absolute;
-	width: 87px;
+	width: 100px;
 	background-image: url(./assets/wall-right.png);
 	min-height: 100vh;
 	background-size: contain;
@@ -176,7 +176,7 @@ body {
 	background-position: center;
 	border-top: 4px solid #f5d100;
 	padding: 6px 40px;
-	overflow: scroll;
+	overflow: auto;
 	color: white;
 	font-family: Arial;
 }
