--- a/index.css
+++ b/index.css
@@ -195,6 +195,16 @@ body {
 	position: absolute;
 	border: 14px solid #21aa21;
 }
+.character.select:before {
+	content: '';
+	display: block;
+	width: calc(100% + 4px);
+	height: calc(100% + 4px);
+	top: -2px;
+	left: -2px;
+	position: absolute;
+	border: 14px solid #aa2621;
+}
 
 .character.disabled {
 	cursor: default;
