--- a/index.css
+++ b/index.css
@@ -203,7 +203,7 @@ body {
 	top: -2px;
 	left: -2px;
 	position: absolute;
-	border: 14px solid #aa2621;
+	border: 14px solid #c21807;
 }
 
 .character.disabled {
